# FormalAutomaton

./: .travis.yml  README.md  main_test.cpp
automaton/: CMakeLists.txt  main.cpp  main_test.cpp
automaton/automaton_src/: automaton.cpp  automaton.h
automaton/gtests/: tests.cpp
automaton_src/: CMakeLists.txt
gtests/: tests.cpp
